[lib]
crate-type = ['cdylib']

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'parachain-runtime-wasm'
version = '1.0.0'

[workspace]
members = []

[features]
default = []
std = ['parachain-runtime/std']
[dependencies.parachain-runtime]
default-features = false
path = '..'
[profile.release]
lto = true
panic = 'abort'
